--- a/post/templates/post/package_form.html
+++ b/post/templates/post/package_form.html
@@ -4,6 +4,7 @@
     <div class="row">
     <div class="col-md-8 offset-md-2">
         <form method="post" class="mb-5">
+            {% csrf_token %}
             {% for field in form.visible_fields %}
             <div class="form-group">
                 {{ field.label_tag }}
